-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8274492 | 17.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8280577 | 15.0.7 | Yuri Nesterenko | P3 | Resolved | Fixed | b01 |
java/util/stream/test/org/openjdk/tests/java/util/stream/DoublePrimitiveOpsTests.java
Here's a snippet from the log file:
#section:testng
----------messages:(5/396)----------
command: testng org.openjdk.tests.java.util.stream.DoublePrimitiveOpsTests
reason: Assumed action based on file name: run testng org.openjdk.tests.java.util.stream.DoublePrimitiveOpsTests
Mode: othervm [test requires non-default system module, test or library overrides a system module]
Additional options from @modules: --add-modules jdk.incubator.foreign
elapsed time (seconds): 1188.404
----------configuration:(5/226)*----------
Boot Layer
add modules: jdk.incubator.foreign
add reads: java.base ALL-UNNAMED
patch: java.base T:\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_util\\classes\\5\\lib\\testlibrary\\bootlib\\java.base
----------System.out:(23/1755)*----------
test org.openjdk.tests.java.util.stream.DoublePrimitiveOpsTests.testFlags(): success
test org.openjdk.tests.java.util.stream.DoublePrimitiveOpsTests.testLimit(): success
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\\compile.cpp:1596
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\opto\\compile.cpp:1596), pid=52068, tid=41388
# assert(flat == flatten_alias_type(flat)) failed: not idempotent: adr_type = java/util/stream/Nodes$SizedCollectorTask:NotNull+68 * [narrow]; flat = java/util/concurrent/ForkJoinTask+68 * [narrow] => oopptr:BotPTR+any [narrow]
#
# JRE version: Java(TM) SE Runtime Environment (18.0+14) (fastdebug build 18-ea+14-700)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+14-700, compiled mode, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_util\\java\\util\\stream\\test\\org\\openjdk\\tests\\java\\util\\stream\\DoublePrimitiveOpsTests\\hs_err_pid52068.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_util\\java\\util\\stream\\test\\org\\openjdk\\tests\\java\\util\\stream\\DoublePrimitiveOpsTests\\hs_err_pid52068.log
#
# Compiler replay data is saved as:
# T:\\testoutput\\test-support\\jtreg_open_test_jdk_jdk_util\\java\\util\\stream\\test\\org\\openjdk\\tests\\java\\util\\stream\\DoublePrimitiveOpsTests\\replay_pid52068.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(1/57)----------
WARNING: Using incubator modules: jdk.incubator.foreign
----------rerun:(56/6080)*----------
<snip>
result: Failed. Unexpected exit from test [exit code: 1]
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x000001bc4591f460): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=41388, stack(0x000000b4a0500000,0x000000b4a0600000)]
Current CompileTask:
C2: 115247 11801 b 4 java.util.concurrent.ForkJoinPool::scan (235 bytes)
Stack: [0x000000b4a0500000,0x000000b4a0600000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xad7791] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:235)
V [jvm.dll+0xcf45c5] VMError::report+0x1005 (vmError.cpp:742)
V [jvm.dll+0xcf5f4e] VMError::report_and_die+0x7fe (vmError.cpp:1552)
V [jvm.dll+0xcf66d4] VMError::report_and_die+0x64 (vmError.cpp:1333)
V [jvm.dll+0x4c9267] report_vm_error+0xb7 (debug.cpp:282)
V [jvm.dll+0x4891ff] Compile::find_alias_type+0x17f (compile.cpp:1595)
V [jvm.dll+0xa2998f] MemNode::Ideal_common+0x68f (memnode.cpp:368)
V [jvm.dll+0xa271c9] LoadNode::Ideal+0x39 (memnode.cpp:1716)
V [jvm.dll+0xb1a211] PhaseIterGVN::transform_old+0xc1 (phaseX.cpp:1258)
V [jvm.dll+0xb1779f] PhaseIterGVN::optimize+0x2cf (phaseX.cpp:1206)
V [jvm.dll+0x48d5cb] PhaseIdealLoop::optimize+0x16b (loopnode.hpp:1153)
V [jvm.dll+0x481a14] Compile::Optimize+0xc04 (compile.cpp:2210)
V [jvm.dll+0x47eda7] Compile::Compile+0x1457 (compile.cpp:785)
V [jvm.dll+0x3b20c1] C2Compiler::compile_method+0x121 (c2compiler.cpp:110)
V [jvm.dll+0x497d2f] CompileBroker::invoke_compiler_on_method+0x7bf (compileBroker.cpp:2290)
V [jvm.dll+0x495657] CompileBroker::compiler_thread_loop+0x2b7 (compileBroker.cpp:1966)
V [jvm.dll+0xc80bdd] JavaThread::thread_main_inner+0x1fd (thread.cpp:1272)
V [jvm.dll+0xc77174] Thread::call_run+0x1b4 (thread.cpp:365)
V [jvm.dll+0xad614e] thread_native_entry+0xae (os_windows.cpp:549)
C [ucrtbase.dll+0x1fb80]
C [KERNEL32.DLL+0x84d4]
C [ntdll.dll+0x51781]
- backported by
-
JDK-8274492 CI: ciInstanceKlass::get_canonical_holder() doesn't respect instance size
-
- Resolved
-
-
JDK-8280577 CI: ciInstanceKlass::get_canonical_holder() doesn't respect instance size
-
- Resolved
-
- relates to
-
JDK-8237767 Field layout computation overhaul
-
- Resolved
-
-
JDK-8373487 Test fails due to InternalError: a fault occurred in an unsafe memory access operation
-
- Open
-
- links to
-
Commit
openjdk/jdk15u-dev/a7a603c9
-
Commit
openjdk/jdk17u/fd81865b
-
Commit
openjdk/jdk/f7e9f56e
-
Review
openjdk/jdk15u-dev/159
-
Review
openjdk/jdk17u/105
-
Review
openjdk/jdk/5395