8273359: CI: ciInstanceKlass::get_canonical_holder() doesn't respect instance size

Reviewed-by: bae
Backport-of: f7e9f56e235dc50daae0a85c9790d5b04c9c60f0